# looseversion

./: CHANGES  CHANGES.md  README.md  looseversion.py  looseversion.pyi  pyproject.toml  setup.cfg  tests.py  tox.ini
.github/workflows/: package.yml
src/looseversion/: __init__.py  __init__.pyi
