[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "looseversion"
maintainers = [{name = "Chris Markiewicz", email = "effigies@gmail.com"}]
version = "1.0.3"
description = "Version numbering for anarchists and software realists"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: Python Software Foundation License",
]
urls = {Homepage = "https://github.com/effigies/looseversion"}
requires-python = ">=3"

[tool.flit.sdist]
include = ["tests.py", "tox.ini", "CHANGES"]
