[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looseversion"
maintainers = [{name = "Chris Markiewicz", email = "effigies@gmail.com"}]
version = "1.3.0"
description = "Version numbering for anarchists and software realists"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: Python Software Foundation License",
]
urls = {Homepage = "https://github.com/effigies/looseversion"}

[tool.hatch.build]
exclude = [".github"]

[tool.hatch.build.targets.wheel]
packages = ["src/looseversion"]
