[metadata]
name = looseversion
author = Chris Markiewicz
author_email = effigies@gmail.com
version = 1.0.0
description = A preservation of distutils.version.LooseVersion
url = https://github.com/effigies/looseversion
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 6 - Mature
    License :: OSI Approved :: Python Software Foundation License

[options]
python_requires = >=3
packages = find_namespace:
