[metadata]
name = looseversion
maintainer = Chris Markiewicz
maintainer_email = effigies@gmail.com
version = 1.0.3.dev0
description = Version numbering for anarchists and software realists
url = https://github.com/effigies/looseversion
license = PSF-2.0
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 6 - Mature
    License :: OSI Approved :: Python Software Foundation License

[options]
python_requires = >=3
py_modules = looseversion

[options.package_data]
* = tests.py
